--- a/src/index.html
+++ b/src/index.html
@@ -1,16 +1,194 @@
 <!DOCTYPE html>
-<html lang="en">
+<html class="text-[10px]" lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>KNFT</title>
     <link rel="stylesheet" href="./output.css" />
+    <link rel="stylesheet" href="./style/style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Space+Grotesk:wght@300..700&display=swap"
+      rel="stylesheet"
+    />
   </head>
-  <body>
+  <body class="w-full font-spaceGrotesk">
     <main>
       <div class="hero">
-        <header>
-          <nav></nav>
+        <header class="bg-[#0F111B] h-screen">
+          <nav
+            class="px-[8rem] py-[3.7rem] font-montserrat w-full h-auto flex justify-between items-center"
+          >
+            <ul class="nav_Logo">
+              <li>
+                <a href="#"
+                  ><svg
+                    width="76"
+                    height="21"
+                    viewBox="0 0 76 21"
+                    fill="none"
+                    xmlns="http://www.w3.org/2000/svg"
+                  >
+                    <path
+                      d="M0.201172 0.0534668H4.34375V8.35229L12.123 0.0534668H17.5645L9.30664 8.35229L17.9883 20.2058H12.5742L6.35352 11.4011L4.34375 13.4656V20.2058H0.201172V0.0534668ZM20.2988 0.0534668H24.7148L32.7402 14.1218V0.0534668H36.6641V20.2058H32.4531L24.2227 5.89136V20.2058H20.2988V0.0534668ZM40.6016 0.0808105H54.8887V3.62183H44.7852V8.25659H53.6309V11.7566H44.7852V20.2058H40.6016V0.0808105ZM72.3613 0.0534668V3.62183H66.332V20.2058H62.0938V3.62183H56.0371V0.0534668H72.3613ZM71.3359 16.1316H75.4785V20.2058H71.3359V16.1316Z"
+                      fill="url(#paint0_linear_0_286)"
+                    />
+                    <defs>
+                      <linearGradient
+                        id="paint0_linear_0_286"
+                        x1="-27.5188"
+                        y1="-5.79418"
+                        x2="92.7065"
+                        y2="66.0161"
+                        gradientUnits="userSpaceOnUse"
+                      >
+                        <stop stop-color="#DF1CFF" />
+                        <stop offset="1" stop-color="#EA0070" />
+                      </linearGradient>
+                    </defs>
+                  </svg>
+                </a>
+              </li>
+            </ul>
+            <ul
+              class="nav-Menu font-medium text-[2rem] w-[53.4rem] text-white-200 flex justify-between items-center"
+            >
+              <li><a class="text-white-100" href="#">Home</a></li>
+              <li><a href="#">All NFTs</a></li>
+              <li><a href="#">Team</a></li>
+              <li><a href="#">Terms & Co.</a></li>
+              <li><a href="#">Contact</a></li>
+            </ul>
+            <ul class="nav-Touch">
+              <a href="#"
+                ><svg
+                  width="201"
+                  height="55"
+                  viewBox="0 0 201 55"
+                  fill="none"
+                  xmlns="http://www.w3.org/2000/svg"
+                >
+                  <rect
+                    x="0.75"
+                    y="1.45581"
+                    width="199.5"
+                    height="52.5"
+                    rx="7.25"
+                    fill="white"
+                    fill-opacity="0.05"
+                  />
+                  <rect
+                    x="0.75"
+                    y="1.45581"
+                    width="199.5"
+                    height="52.5"
+                    rx="7.25"
+                    stroke="url(#paint0_linear_0_293)"
+                    stroke-width="1.5"
+                  />
+                  <path
+                    d="M51.2012 24.8035C50.9733 23.8204 50.4167 23.1335 49.5312 22.7429C49.0365 22.5281 48.4863 22.4207 47.8809 22.4207C46.722 22.4207 45.7682 22.8601 45.0195 23.739C44.2773 24.6114 43.9062 25.9265 43.9062 27.6843C43.9062 29.4552 44.3099 30.7084 45.1172 31.4441C45.9245 32.1798 46.8424 32.5476 47.8711 32.5476C48.8802 32.5476 49.707 32.2579 50.3516 31.6785C50.9961 31.0925 51.3932 30.3276 51.543 29.3835H48.2129V26.9812H54.209V34.7058H52.2168L51.9141 32.9089C51.3346 33.5925 50.8138 34.0743 50.3516 34.3542C49.5573 34.8425 48.5807 35.0867 47.4219 35.0867C45.5143 35.0867 43.9518 34.4259 42.7344 33.1042C41.4648 31.7761 40.8301 29.9597 40.8301 27.655C40.8301 25.3243 41.4714 23.4558 42.7539 22.0496C44.0365 20.6433 45.7324 19.9402 47.8418 19.9402C49.6712 19.9402 51.1393 20.4057 52.2461 21.3367C53.3594 22.2611 53.9974 23.4167 54.1602 24.8035H51.2012ZM61.0645 26.073C60.4199 26.073 59.9186 26.2748 59.5605 26.6785C59.209 27.0821 58.9876 27.629 58.8965 28.3191H63.2227C63.1771 27.5834 62.9525 27.0268 62.5488 26.6492C62.1517 26.2651 61.6569 26.073 61.0645 26.073ZM61.0645 23.7781C61.9499 23.7781 62.7474 23.9441 63.457 24.2761C64.1667 24.6082 64.7526 25.1322 65.2148 25.8484C65.6315 26.4799 65.9017 27.2123 66.0254 28.0457C66.097 28.5339 66.1263 29.2371 66.1133 30.155H58.8281C58.8672 31.2227 59.2025 31.9714 59.834 32.4011C60.2181 32.6681 60.6803 32.8015 61.2207 32.8015C61.7936 32.8015 62.2591 32.6388 62.6172 32.3132C62.8125 32.1375 62.985 31.8933 63.1348 31.5808H65.9766C65.9049 32.2123 65.5762 32.8536 64.9902 33.5046C64.0788 34.5398 62.8027 35.0574 61.1621 35.0574C59.8079 35.0574 58.6133 34.6212 57.5781 33.7488C56.543 32.8764 56.0254 31.4571 56.0254 29.491C56.0254 27.6485 56.4909 26.2358 57.4219 25.2527C58.3594 24.2696 59.5736 23.7781 61.0645 23.7781ZM66.9043 26.1414V24.1589H68.3887V21.1902H71.1426V24.1589H72.8711V26.1414H71.1426V31.7664C71.1426 32.2026 71.1979 32.476 71.3086 32.5867C71.4193 32.6908 71.7578 32.7429 72.3242 32.7429C72.4089 32.7429 72.4967 32.7429 72.5879 32.7429C72.6855 32.7364 72.7799 32.7299 72.8711 32.7234V34.8035L71.5527 34.8523C70.2376 34.8979 69.3392 34.67 68.8574 34.1687C68.5449 33.8497 68.3887 33.3582 68.3887 32.6941V26.1414H66.9043ZM83.0859 22.7917H80.2637V20.2234H83.0859V22.7917ZM80.2637 24.0613H83.0859V34.7058H80.2637V24.0613ZM91.6895 23.8074C92.7897 23.8074 93.6882 24.0971 94.3848 24.6765C95.0879 25.2494 95.4395 26.2032 95.4395 27.5378V34.7058H92.5879V28.2312C92.5879 27.6713 92.513 27.2416 92.3633 26.9421C92.0898 26.3953 91.569 26.1218 90.8008 26.1218C89.8568 26.1218 89.209 26.5222 88.8574 27.323C88.6751 27.7462 88.584 28.2865 88.584 28.9441V34.7058H85.8105V24.0808H88.4961V25.6335C88.8542 25.0867 89.1927 24.6928 89.5117 24.4519C90.0846 24.0222 90.8105 23.8074 91.6895 23.8074ZM114.268 20.3113V22.8601H109.961V34.7058H106.934V22.8601H102.607V20.3113H114.268ZM119.102 32.7429C119.915 32.7429 120.54 32.4532 120.977 31.8738C121.413 31.2944 121.631 30.4708 121.631 29.4031C121.631 28.3354 121.413 27.5151 120.977 26.9421C120.54 26.3627 119.915 26.073 119.102 26.073C118.288 26.073 117.66 26.3627 117.217 26.9421C116.781 27.5151 116.562 28.3354 116.562 29.4031C116.562 30.4708 116.781 31.2944 117.217 31.8738C117.66 32.4532 118.288 32.7429 119.102 32.7429ZM124.551 29.4031C124.551 30.9656 124.102 32.3035 123.203 33.4167C122.305 34.5235 120.941 35.0769 119.111 35.0769C117.282 35.0769 115.918 34.5235 115.02 33.4167C114.121 32.3035 113.672 30.9656 113.672 29.4031C113.672 27.8666 114.121 26.5352 115.02 25.4089C115.918 24.2826 117.282 23.7195 119.111 23.7195C120.941 23.7195 122.305 24.2826 123.203 25.4089C124.102 26.5352 124.551 27.8666 124.551 29.4031ZM129.326 24.0613V30.4773C129.326 31.0828 129.398 31.5385 129.541 31.8445C129.795 32.3848 130.293 32.655 131.035 32.655C131.986 32.655 132.637 32.2709 132.988 31.5027C133.171 31.086 133.262 30.5359 133.262 29.8523V24.0613H136.084V34.7058H133.379V33.2019C133.353 33.2345 133.288 33.3321 133.184 33.4949C133.079 33.6576 132.956 33.8009 132.812 33.9246C132.376 34.3152 131.953 34.5821 131.543 34.7253C131.139 34.8686 130.664 34.9402 130.117 34.9402C128.542 34.9402 127.48 34.3738 126.934 33.241C126.628 32.616 126.475 31.6947 126.475 30.4773V24.0613H129.326ZM145.137 27.8796C145.085 27.4825 144.951 27.1244 144.736 26.8054C144.424 26.3757 143.939 26.1609 143.281 26.1609C142.344 26.1609 141.702 26.6264 141.357 27.5574C141.175 28.0522 141.084 28.7097 141.084 29.53C141.084 30.3113 141.175 30.9395 141.357 31.4148C141.689 32.3002 142.314 32.7429 143.232 32.7429C143.883 32.7429 144.346 32.5671 144.619 32.2156C144.893 31.864 145.059 31.4083 145.117 30.8484H147.959C147.894 31.6947 147.588 32.4955 147.041 33.2507C146.169 34.4682 144.876 35.0769 143.164 35.0769C141.452 35.0769 140.192 34.5691 139.385 33.5535C138.577 32.5378 138.174 31.2195 138.174 29.5984C138.174 27.769 138.62 26.3464 139.512 25.3308C140.404 24.3152 141.634 23.8074 143.203 23.8074C144.538 23.8074 145.628 24.1069 146.475 24.7058C147.327 25.3048 147.832 26.3627 147.988 27.8796H145.137ZM155.781 23.7878C156.439 23.7878 157.035 23.9018 157.568 24.1296C158.109 24.3575 158.551 24.7058 158.896 25.1746C159.189 25.5717 159.368 25.9819 159.434 26.405C159.499 26.8217 159.531 27.5053 159.531 28.4558V34.7058H156.689V28.2312C156.689 27.6583 156.592 27.196 156.396 26.8445C156.143 26.3497 155.661 26.1023 154.951 26.1023C154.215 26.1023 153.656 26.3497 153.271 26.8445C152.894 27.3328 152.705 28.0326 152.705 28.9441V34.7058H149.932V20.3601H152.705V25.448C153.109 24.8295 153.574 24.3998 154.102 24.1589C154.635 23.9115 155.195 23.7878 155.781 23.7878Z"
+                    fill="white"
+                  />
+                  <defs>
+                    <linearGradient
+                      id="paint0_linear_0_293"
+                      x1="-4.15807e-07"
+                      y1="-17.7934"
+                      x2="191.057"
+                      y2="106.876"
+                      gradientUnits="userSpaceOnUse"
+                    >
+                      <stop stop-color="#E50AA7" />
+                      <stop offset="1" stop-color="#FF17BD" stop-opacity="0" />
+                    </linearGradient>
+                  </defs>
+                </svg>
+              </a>
+            </ul>
+          </nav>
+          <section
+            class="header-Contents px-[8rem] py-[3.7rem] flex flex-wrap justify-between items-center"
+          >
+            <div
+              class=" w-[63.2rem] h-[37.4rem] text-white-100 font-montserrat font-medium flex flex-col justify-between items-start relative"
+            >
+              <h1 class="text-[5.274rem] w-full">
+                Buy, Create & <br />
+                Sell <span class="text-blue"> Unique NFTs</span> File.
+              </h1>
+              <p class="text-[2rem] leading-[150%]">
+                NFTs are used for digital art and collectibles, GameFi <br />
+                projects, metaverses, and more.
+              </p>
+              <span>
+                <a
+                  class="btn-Link font-spaceGrotesk font-bold text-[2rem] flex justify-center items-center"
+                  href="#"
+                  >Explore NFTs</a
+                >
+              </span>
+              <span class="absolute top-[65%] right-0">
+                <img src="./images/lamp.png" alt="" />
+              </span>
+            </div>
+            <div class="flex justify-center items-center">
+              <span class="relative"
+                ><svg
+                  width="643"
+                  height="861"
+                  viewBox="0 0 643 861"
+                  fill="none"
+                  xmlns="http://www.w3.org/2000/svg"
+                >
+                  <mask id="path-1-inside-1_0_34" fill="white">
+                    <path
+                      fill-rule="evenodd"
+                      clip-rule="evenodd"
+                      d="M489.162 591.324C469.076 571.238 438.077 568.124 411.717 578.709C303.675 622.096 175.474 600.024 87.9428 512.493C-29.1024 395.448 -29.1024 205.68 87.9428 88.635C204.988 -28.4103 394.756 -28.4103 511.801 88.635C599.332 176.166 621.404 304.368 578.017 412.411C567.431 438.77 570.545 469.77 590.631 489.855C607.881 507.105 633.599 511.586 657.752 508.159C710.987 500.608 767.001 517.306 807.948 558.253C877.091 627.396 877.091 739.498 807.948 808.641C738.805 877.784 626.702 877.784 557.56 808.641C516.613 767.694 499.915 711.68 507.466 658.445C510.892 634.292 506.412 608.574 489.162 591.324Z"
+                    />
+                  </mask>
+                  <path
+                    fill-rule="evenodd"
+                    clip-rule="evenodd"
+                    d="M489.162 591.324C469.076 571.238 438.077 568.124 411.717 578.709C303.675 622.096 175.474 600.024 87.9428 512.493C-29.1024 395.448 -29.1024 205.68 87.9428 88.635C204.988 -28.4103 394.756 -28.4103 511.801 88.635C599.332 176.166 621.404 304.368 578.017 412.411C567.431 438.77 570.545 469.77 590.631 489.855C607.881 507.105 633.599 511.586 657.752 508.159C710.987 500.608 767.001 517.306 807.948 558.253C877.091 627.396 877.091 739.498 807.948 808.641C738.805 877.784 626.702 877.784 557.56 808.641C516.613 767.694 499.915 711.68 507.466 658.445C510.892 634.292 506.412 608.574 489.162 591.324Z"
+                    fill="url(#paint0_linear_0_34)"
+                  />
+                  <path
+                    d="M657.752 508.159L658.173 511.13L657.752 508.159ZM578.017 412.411L580.801 413.529L578.017 412.411ZM411.717 578.709L410.599 575.925L411.717 578.709ZM85.8215 514.615C174.232 603.025 303.718 625.312 412.835 581.493L410.599 575.925C303.633 618.88 176.715 597.023 90.0641 510.372L85.8215 514.615ZM85.8215 86.5136C-32.3953 204.73 -32.3953 396.398 85.8215 514.615L90.0641 510.372C-25.8095 394.498 -25.8095 206.63 90.0641 90.7563L85.8215 86.5136ZM513.922 86.5136C395.706 -31.7032 204.038 -31.7032 85.8215 86.5136L90.0641 90.7563C205.938 -25.1174 393.806 -25.1174 509.68 90.7563L513.922 86.5136ZM580.801 413.529C624.62 304.411 602.333 174.924 513.922 86.5136L509.68 90.7563C596.331 177.408 618.188 304.326 575.233 411.293L580.801 413.529ZM810.069 556.132C768.427 514.489 711.459 497.511 657.331 505.189L658.173 511.13C710.515 503.705 765.575 520.122 805.827 560.374L810.069 556.132ZM810.069 810.762C880.384 740.448 880.384 626.446 810.069 556.132L805.827 560.374C873.798 628.345 873.798 738.549 805.827 806.52L810.069 810.762ZM555.438 810.762C625.753 881.077 739.755 881.077 810.069 810.762L805.827 806.52C737.855 874.491 627.652 874.491 559.681 806.52L555.438 810.762ZM504.496 658.024C496.818 712.153 513.796 769.12 555.438 810.762L559.681 806.52C519.429 766.268 503.012 711.208 510.437 658.866L504.496 658.024ZM588.51 491.977C606.663 510.13 633.476 514.633 658.173 511.13L657.331 505.189C633.721 508.538 609.099 504.08 592.753 487.734L588.51 491.977ZM510.437 658.866C513.94 634.17 509.437 607.356 491.284 589.203L487.041 593.445C503.387 609.792 507.845 634.414 504.496 658.024L510.437 658.866ZM575.233 411.293C564.307 438.5 567.387 470.854 588.51 491.977L592.753 487.734C573.703 468.685 570.555 439.041 580.801 413.529L575.233 411.293ZM412.835 581.493C438.348 571.248 467.992 574.396 487.041 593.445L491.284 589.203C470.161 568.08 437.806 565 410.599 575.925L412.835 581.493Z"
+                    fill="url(#paint1_linear_0_34)"
+                    mask="url(#path-1-inside-1_0_34)"
+                  />
+                  <defs>
+                    <linearGradient
+                      id="paint0_linear_0_34"
+                      x1="146.861"
+                      y1="65.7427"
+                      x2="701.285"
+                      y2="1061.36"
+                      gradientUnits="userSpaceOnUse"
+                    >
+                      <stop stop-color="#462FFF" stop-opacity="0.08" />
+                      <stop offset="1" stop-color="#4730FF" stop-opacity="0" />
+                    </linearGradient>
+                    <linearGradient
+                      id="paint1_linear_0_34"
+                      x1="127.767"
+                      y1="114.177"
+                      x2="489.729"
+                      y2="939.627"
+                      gradientUnits="userSpaceOnUse"
+                    >
+                      <stop stop-color="#4484FF" />
+                      <stop offset="1" stop-opacity="0" />
+                    </linearGradient>
+                  </defs>
+                </svg>
+                <img class="absolute top-[5%] left-[8%]" src="./images/nav-image.png" alt="" />
+              </span>
+            </div>
+          </section>
         </header>
       </div>
     </main>
